--- a/package.json
+++ b/package.json
@@ -1,52 +1,39 @@
 {
-  "name": "wcmoney",
-  "version": "0.1.0",
+  "name": "wc-money",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "dev:server": "json-server server.json -p 3333 -w -d 500",
+    "lint": "eslint src --ext .tsx,.ts",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@types/styled-components": "^5.1.25",
+    "@hookform/resolvers": "^2.9.7",
+    "@radix-ui/react-dialog": "^1.0.0",
+    "@radix-ui/react-radio-group": "^1.0.0",
     "axios": "^0.27.2",
-    "miragejs": "^0.1.45",
-    "polished": "^4.2.2",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.15.1",
-    "react-scripts": "5.0.1",
+    "react-hook-form": "^7.34.0",
+    "scheduler": "^0.23.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "use-context-selector": "^1.4.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-modal": "^3.13.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@rocketseat/eslint-config": "^1.1.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^2.0.0",
+    "eslint": "^8.20.0",
+    "json-server": "^0.17.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.0"
   }
 }
